fix for clickable checkbox labels

--- a/pages/customprompts/mzta-custom-prompts.html
+++ b/pages/customprompts/mzta-custom-prompts.html
@@ -62,15 +62,15 @@
             <td rowspan="2" class="w19">
                 <label class="field_title">__MSG_customPrompts_Properties__:</label>
                 <br>
-                <span class="need_selected_span"><input type="checkbox" id="checkboxNeedSelectedNew" name="need_selected" class="need_selected_new" value="1" tabindex="6"> <label for="checkboxNeedSelectedNew">__MSG_customPrompts_form_label_need_selected__</label></span>
+                <label for="checkboxNeedSelectedNew"><span class="need_selected_span"><input type="checkbox" id="checkboxNeedSelectedNew" name="need_selected" class="need_selected_new" value="1" tabindex="6"> __MSG_customPrompts_form_label_need_selected__</label></span>
                 <br>
-                <input type="checkbox" id="checkboxNeedSignatureNew" name="need_signature" value="1" tabindex="7"> <label for="checkboxNeedSignatureNew">__MSG_customPrompts_form_label_need_signature__</label>
+                <label for="checkboxNeedSignatureNew"><input type="checkbox" id="checkboxNeedSignatureNew" name="need_signature" value="1" tabindex="7"> __MSG_customPrompts_form_label_need_signature__</label>
                 <br>
-                <span class="need_custom_text_span"><input type="checkbox" id="checkboxNeedCustomTextNew" name="need_custom_text" class="need_custom_text_new" value="1" tabindex="8"> <label for="checkboxNeedCustomTextNew">__MSG_customPrompts_form_label_need_custom_text__</label></span>
+                <label for="checkboxNeedCustomTextNew"><span class="need_custom_text_span"><input type="checkbox" id="checkboxNeedCustomTextNew" name="need_custom_text" class="need_custom_text_new" value="1" tabindex="8"> __MSG_customPrompts_form_label_need_custom_text__</label></span>
                 <br>
-                <input type="checkbox" id="checkboxDefineResponseLangNew" name="define_response_lang" value="1" tabindex="8"> <label for="checkboxDefineResponseLangNew">__MSG_customPrompts_form_label_define_response_lang__</label>
+                <label for="checkboxDefineResponseLangNew"><input type="checkbox" id="checkboxDefineResponseLangNew" name="define_response_lang" value="1" tabindex="8"> __MSG_customPrompts_form_label_define_response_lang__</label>
                 <br>
-                <input type="checkbox" id="checkboxUseDiffViewerNew" name="use_diff_viewer" value="1" tabindex="9" title="__MSG_customPrompts_form_label_use_diff_viewer_title__"> <label for="checkboxUseDiffViewerNew" title="__MSG_customPrompts_form_label_use_diff_viewer_title__">__MSG_customPrompts_form_label_use_diff_viewer__</label>
+                <label for="checkboxUseDiffViewerNew" title="__MSG_customPrompts_form_label_use_diff_viewer_title__"><input type="checkbox" id="checkboxUseDiffViewerNew" name="use_diff_viewer" value="1" tabindex="9" title="__MSG_customPrompts_form_label_use_diff_viewer_title__"> __MSG_customPrompts_form_label_use_diff_viewer__</label>
             </td>
         </tr>
         <tr>
