--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -17,6 +17,7 @@
         <li>It is now possible to define a custom placeholder with dynamic data to retrieve any header present in the current email [<a href="https://github.com/micz/ThunderAI/issues/527">#527</a>].</li>
         <li><i>[All APIs]</i> The configuration information reported in the webchat API has been improved for all integrations.</li>
         <li>Spanish (es) translation added, thanks to <a href="https://hosted.weblate.org/user/gerardo.sobarzo/">Gerardo Sobarzo</a>, <a href="https://hosted.weblate.org/user/arendon/">Andrés Rendón Hernández</a>, <a href="https://hosted.weblate.org/user/ErickLimonG/">Erick Limon</a>.</li>
+        <li>Swedish (sv) translation added, thanks to <a href="https://hosted.weblate.org/user/Andy_tb/">Andreas Pettersson</a>.</li>
         <li>Various fixes.</li>
         <li>...</li>
       </ul>
