--- a/pages/summarize/mzta-summarize.html
+++ b/pages/summarize/mzta-summarize.html
@@ -79,6 +79,22 @@
                 __MSG_save__
             </button>
         </div>
+
+        <!-- separator -->
+        <div class="autocomplete-container">
+            <textarea id="summarize_email_separator_text" rows="7"></textarea>
+            <ul class="autocomplete-list hidden"></ul>
+        </div>
+        
+        <div id="summarize_info_additional_statements"></div>
+        <div class="btn_div">
+            <button id="btn_reset_email_separator" disabled>
+                __MSG_reset_default__
+            </button>
+            <button id="btn_save_email_separator" disabled>
+                __MSG_save__
+            </button>
+        </div>
         
     </div>
     <script src="mzta-summarize.js" type="module"></script>
