get_task has now the ability to specify a different API. see #498

--- a/pages/get-task/mzta-get-task.html
+++ b/pages/get-task/mzta-get-task.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>ThunderAI - __MSG_GetTask_PageTitle__</title>
     <link rel="stylesheet" href="mzta-get-task.css">
+    <link rel="stylesheet" href="../_lib/connection-ui.css">
     <link rel="icon" href="../../images/icon-16px.png">
 </head>
 <body>
@@ -11,10 +12,20 @@
         <h1 class="page_title">__MSG_GetTask_PageTitle__</h1>
         <p>__MSG_GetTask_info_default__</p>
     </div>
-    <div class="get_calendar_event_table_title section_title">__MSG_get_calendar_event_prompt_prefs_title__</div>
+    <div class="get_task_table_title section_title">__MSG_get_task_prompt_prefs_title__</div>
     <table id="miczPrefs">
-          <tr class="get_calendar_event_tr">
-            <td><span>__MSG_prefs_OptionText_calendar_enforce_timezone__</span></td>
+          <tr>
+            <td><span class="opt_title">__MSG_prefs_OptionText_use_specific_integration__</span></td>
+            <td>
+              <label>
+                <input type="checkbox" id="get_task_use_specific_integration" name="get_task_use_specific_integration" class="option-input" /> __MSG_prefs_OptionText_get_calendar_event_use_specific_integration_Info__
+              </label>
+            </td>
+          </tr>
+          <tr id="connection_ui_anchor" style="display:none"></tr>
+          <tr id="connection_ui_end" style="display:none"></tr>
+          <tr class="get_task_tr">
+            <td><span class="opt_title">__MSG_prefs_OptionText_calendar_enforce_timezone__</span></td>
             <td>
               <label>
                 <input type="checkbox" id="calendar_enforce_timezone" name="calendar_enforce_timezone" class="option-input" /> __MSG_prefs_OptionText_calendar_enforce_timezone_Info__
