--- a/pages/get-calendar-event/mzta-get-calendar-event.html
+++ b/pages/get-calendar-event/mzta-get-calendar-event.html
@@ -37,6 +37,16 @@
             </td>
           </tr>
           <tr class="get_calendar_event_tr">
+            <td><span class="opt_title">__MSG_prefs_OptionText_get_calendar_event_from_clipboard__</span>
+            </td>
+            <td>
+              <label>
+                <input type="checkbox" id="get_calendar_event_from_clipboard" name="get_calendar_event_from_clipboard" class="option-input" />
+                __MSG_prefs_OptionText_get_calendar_event_from_clipboard_Info__
+              </label>
+            </td>
+          </tr>
+          <tr class="get_calendar_event_tr">
             <td><span  class="opt_title">__MSG_prefs_OptionText_calendar_enforce_timezone__</span></td>
             <td>
               <label>
