added an info about data persistence for the spam reports

--- a/pages/spamfilter/mzta-spamfilter.html
+++ b/pages/spamfilter/mzta-spamfilter.html
@@ -57,7 +57,8 @@
     <button type="button" id="accounts_deselect_all">__MSG_DeselectAll__</button>
     </div>
     <div id="spamfitler_reports_container">
-      <h2>__MSG_SpamReport_Title__</h2>
+      <div><span  class="section_title">__MSG_SpamReport_Title__</span>
+      <br><span class="infoline">__MSG_SpamReport_infoline__</span></div>
       <table id="report_data">
           <thead>
               <tr>
