added an option to hide the spam filter info in the message. see #506

--- a/pages/spamfilter/mzta-spamfilter.html
+++ b/pages/spamfilter/mzta-spamfilter.html
@@ -35,6 +35,15 @@
               </label>
             </td>
           </tr>
+          <tr class="spamfilter_tr">
+            <td><span class="opt_title">__MSG_prefs_OptionText_spamfilter_show_msg_panel__</span></td>
+            <td>
+              <label>
+                <input type="checkbox" id="spamfilter_show_msg_panel" name="spamfilter_show_msg_panel" class="option-input" />
+                __MSG_prefs_OptionText_spamfilter_show_msg_panel_Info__
+              </label>
+            </td>
+          </tr>
 
     </table>
     <div id="spamfilter_container">
