thunderstats link added. see #663

--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -12,6 +12,11 @@
       <tr id="mzta_top_msg">
         <td colspan="2"><div>__MSG_prefs_SurveyLinkText__<br><a href="https://forms.gle/1qK2wcbuhaRzhwyt9">__MSG_prefs_SurveyLinkText2__</a></div></td>
       </tr>
+      <tr id="thstats">
+        <td colspan="2">
+          <div>__MSG_prefs_THStats_1__ <a href="https://addons.thunderbird.net/it/thunderbird/addon/thunderstats/">__MSG_prefs_THStats_2__ <img src="/images/thunderstats.png"></a></div>
+        </td>
+      </tr>
       <tr id="owl_warning">
         <td colspan="2"><div class="warning">__MSG_prefs_OptionText_owl_warning__ <a href="https://micz.it/thunderbird-addon-thunderai/owl/">__MSG_more_info_string__</a></div></td>
       </tr>
